Mejorado de Java 25 -2